tests/src/frontend/typechecking/invalid/type_switch_multi_pattern2.sk
base class B {
  children =
  | X(x: Int)
  | Y(y: Bool)
  | Z()
}

fun shouldFail(): String {
  Y(false) match {
  | X(_) -> "One\n"
  | Y(_) -> "Two\n"
  | Z() -> "Three\n"
  }
}
